<resources>
    <string name="app_name">ChaT</string>
    <string name="avatar">avatar</string>
    <string name="emoji">emoji</string>
    <string name="hint_write">Write…</string>
    <string name="send_message">send message</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="channels">Channels</string>
    <string name="people">People</string>
    <string name="profile">Profile</string>
    <string name="title_message"># %s</string>
    <string name="topic">Topic: %s</string>
    <string name="search">Search…</string>
    <string name="subscribed">Subscribed</string>
    <string name="all_streams">All streams</string>
    <string name="users">Users…</string>
    <string name="log_out">Log out</string>
    <string name="online">online</string>
    <string name="user_avatar">user\'s avatar</string>
    <string name="error_try_again">Error. Try again</string>
    <string name="active">active</string>
    <string name="idle">idle</string>
    <string name="offline">offline</string>
</resources>