<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_profile_card_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="126dp"
    tools:context=".channel.ui.ChannelsFragment">

    <ImageView
        android:id="@+id/fragment_profile_avatar"
        android:layout_width="185dp"
        android:layout_height="185dp"
        android:contentDescription="@string/user_avatar"
        android:src="@drawable/profile"
        app:layout_constraintBottom_toTopOf="@id/fragment_profile_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/fragment_profile_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragment_profile_avatar"
        tools:text="@tools:sample/last_names" />

    <TextView
        android:id="@+id/fragment_profile_status_online"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/active"
        android:textColor="@color/text_color_status_online"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragment_profile_name"
        tools:text="@tools:sample/lorem" />

    <TextView
        android:id="@+id/fragment_profile_status_idle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/idle"
        android:textColor="@color/text_color_status_idle"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragment_profile_name"
        tools:text="@tools:sample/lorem" />

    <TextView
        android:id="@+id/fragment_profile_status_offline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/offline"
        android:textColor="@color/text_color_status_offline"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragment_profile_name"
        tools:text="@tools:sample/lorem" />

    <TextView
        android:id="@+id/fragment_profile_tv_error"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/error_try_again"
        android:textColor="@color/text_color_message"
        android:textSize="20sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ProgressBar
        android:id="@+id/fragment_profile_loader"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>
